--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   --contacts-footer-color: rgba(255, 255, 255, 0.6);
   --color-btn-menu: #f5f4fa;
   --color-hero-btn: #188ce8;
+  --transition-hover: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 html {
   box-sizing: border-box;
@@ -54,7 +55,49 @@ p {
   padding-bottom: 94px;
   /* outline: solid red; */
 }
-
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: var(--transition-hover);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.backdrop-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: var(--transition-hover);
+}
+.backdrop-btn:hover {
+  fill: var(--accent-color);
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 /* header */
 .header {
   border-bottom: 1px solid #ececec;
@@ -80,6 +123,7 @@ p {
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: var(--second-title-color);
+  transition: var(--transition-hover);
 }
 .contacts-link,
 .tel-link {
@@ -148,6 +192,7 @@ p {
 .mail-icon,
 .phone-icon {
   margin-right: 10px;
+  transition: var(--transition-hover);
 }
 .tel-link {
   background-color: #ffffff;
@@ -155,6 +200,7 @@ p {
   align-items: center;
   justify-content: center;
   fill: #757575;
+  transition: var(--transition-hover);
 }
 /* Секція герой */
 .hero {
@@ -200,6 +246,7 @@ p {
   border-radius: 4px;
   padding: 10px 32px;
   min-width: 200px;
+  transition: var(--transition-hover);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -358,6 +405,7 @@ p {
   align-items: center;
   justify-content: center;
   fill: #afb1b8;
+  transition: var(--transition-hover);
 }
 .team-icon-link:hover,
 .team-icon-link:focus {
@@ -385,6 +433,7 @@ p {
   align-items: center;
   justify-content: center;
   fill: #afb1b8;
+  transition: var(--transition-hover);
 }
 
 .customers-link:hover,
@@ -453,6 +502,7 @@ p {
   align-items: center;
   justify-content: center;
   fill: #ffffff;
+  transition: var(--transition-hover);
 }
 .footer-soc-item:hover,
 .footer-soc-item:focus {
@@ -483,6 +533,7 @@ p {
   border: 0;
   cursor: pointer;
   border-radius: 4px;
+  transition: var(--transition-hover);
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -515,6 +566,30 @@ p {
   border-right: 1px solid #eeeeee;
   padding: 20px 24px 20px 24px;
 }
+.portfilio-discription {
+  position: relative;
+  overflow: hidden;
+}
+.img-discription {
+  position: absolute;
+  top: 0.5%;
+  left: 0;
+  height: 100%;
+  color: var(--first-title-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  transform: translateY(100%);
+  overflow: auto;
+  transition: var(--transition-hover);
+}
+.portfolio-item:hover .img-discription {
+  transform: translateY(0);
+}
+
 .portfolio-list .link {
   display: block;
 }
